# rt

./: .gitignore  CMakeLists.txt  Makefile  README.md
ext/: CMakeLists.txt
ext/libft/: Makefile
ext/libft/include/libft/math/: v3.h
ext/libftx/: .gitignore  CMakeLists.txt  Makefile  README.md
ext/libftx/include/: libftx.h
ext/libftx/include/libftx/: v3.h
ext/libftx/src/: CMakeLists.txt  v3.c
include/: rt.h
include/rt/: reader.h
libft/: Makefile
libft/include/libft/: math.h
libft/include/libft/math/: m4.h  v2.h  v4.h
src/: main.c
